syntax = "proto3";

option go_package = "pkg/pb";

service Terraform {
  rpc Validate (NoInput) returns (ValidateResult);
  rpc Plan (NoInput) returns (stream CommandOutput);
  rpc Apply (NoInput) returns (stream CommandOutput);
};

message NoInput {
}

message ValidateResult {
  bool validity = 1;
}

message CommandOutput {
  string chunk = 1;
}
